--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -160,5 +160,11 @@
     <Media Include="Sounds\elaser.wav">
       <Filter>Sounds</Filter>
     </Media>
+    <Media Include="Sounds\background.wav">
+      <Filter>Sounds</Filter>
+    </Media>
+    <Media Include="Sounds\losesound.wav">
+      <Filter>Sounds</Filter>
+    </Media>
   </ItemGroup>
 </Project>
