--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -172,5 +172,11 @@
     <Media Include="Sounds\losesound.wav">
       <Filter>Sounds</Filter>
     </Media>
+    <Media Include="Sounds\powerdown.wav">
+      <Filter>Sounds</Filter>
+    </Media>
+    <Media Include="Sounds\powerup.wav">
+      <Filter>Sounds</Filter>
+    </Media>
   </ItemGroup>
 </Project>
