--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="EnemyFire.h" />
     <ClInclude Include="Fire.h" />
     <ClInclude Include="FrameTimer.h" />
+    <ClInclude Include="FrUpgrade.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Graphics.h" />
     <ClInclude Include="Keyboard.h" />
@@ -162,6 +163,7 @@
     <ClCompile Include="EnemyFire.cpp" />
     <ClCompile Include="Fire.cpp" />
     <ClCompile Include="FrameTimer.cpp" />
+    <ClCompile Include="FrUprade.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Graphics.cpp" />
     <ClCompile Include="Keyboard.cpp" />
